[gd_scene load_steps=7 format=3 uid="uid://c7b8bj5xfqwqn"]

[ext_resource type="Theme" uid="uid://bp7cjrfwfbh7k" path="res://assets/rubik_font_theme.tres" id="1_2xhnl"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="2_1hxb9"]
[ext_resource type="AudioStream" uid="uid://j6voo1v00aog" path="res://assets/music/menu (Remix).mp3" id="3_7hwqp"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 72
font_color = Color(0.85, 0.85, 0.85, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 54
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_size = 36
font_color = Color(0.85, 0.85, 0.85, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2xhnl")
script = ExtResource("2_1hxb9")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -850.0
offset_right = 500.0
offset_bottom = -778.0
grow_vertical = 0
text = "OPTIONS"
label_settings = SubResource("LabelSettings_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 800.0
offset_bottom = 200.0
grow_vertical = 2

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SelectionIndicator" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = ">"
label_settings = SubResource("LabelSettings_2")
vertical_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MouseSensitivityContainer" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="MouseSensitivityLabel" type="Label" parent="VBoxContainer/OptionsContainer/MouseSensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MOUSE SENSITIVITY"
label_settings = SubResource("LabelSettings_3")
vertical_alignment = 1

[node name="MouseSensitivitySlider" type="HSlider" parent="VBoxContainer/OptionsContainer/MouseSensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="MouseSensitivityValue" type="Label" parent="VBoxContainer/OptionsContainer/MouseSensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(100, 0)
text = "1.0"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MASTER VOLUME"
label_settings = SubResource("LabelSettings_3")
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 70.0

[node name="MasterVolumeValue" type="Label" parent="VBoxContainer/OptionsContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(100, 0)
text = "70%"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MUSIC VOLUME"
label_settings = SubResource("LabelSettings_3")
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 50.0

[node name="MusicVolumeValue" type="Label" parent="VBoxContainer/OptionsContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(100, 0)
text = "50%"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="SfxVolumeContainer" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="SfxVolumeLabel" type="Label" parent="VBoxContainer/OptionsContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX VOLUME"
label_settings = SubResource("LabelSettings_3")
vertical_alignment = 1

[node name="SfxVolumeSlider" type="HSlider" parent="VBoxContainer/OptionsContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="SfxVolumeValue" type="Label" parent="VBoxContainer/OptionsContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(100, 0)
text = "80%"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
theme = ExtResource("1_2xhnl")
text = "BACK TO MAIN MENU"
flat = true

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7hwqp")
volume_db = -15.0
pitch_scale = 0.6
autoplay = true
